manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "development-afad"
    labels:
        app: "development-afad"
spec:
    type: ClusterIP
    ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
    selector:
        app: "development-afad"
