manifests/ingress-2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "development-1f99"
    labels:
        app: "development-1f99"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: development8a61-development-1f99.9ff1a86d6af744f49a50.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "development-1f99"
                servicePort: 8000
